@@ -29,7 +29,7 @@ module ActiveMerchant #:nodoc:
             add_field('no_shipping', '1')
             add_field('no_note', '1')
             add_field('charset', 'utf-8')
-            add_field('address_override', '1')
+            add_field('address_override', '0')
             add_field('bn', application_id.to_s.slice(0,32)) unless application_id.blank?
           end
 
